Added a few web components to start

--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "react-typescript",
+  "name": "react-typescript-web-components",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.35",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
+    "@testing-library/user-event": "^10.1.0",
+    "@tradeshift/elements": "^0.14.0",
+    "@tradeshift/elements.board": "^0.14.0",
+    "@tradeshift/elements.button": "^0.14.0",
+    "@tradeshift/elements.modal": "^0.14.0",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": " serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,12 +35,17 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
+  },
+  "devDependencies": {
+    "serve": "^11.3.0"
   }
 }
