--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@webcomponents/webcomponentsjs": "^2.6.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
