--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-typescript-web-components",
   "version": "0.1.0",
   "private": true,
+	"homepage": "/react-typescript-web-components",
   "dependencies": {
     "@rooks/use-mutation-observer": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -33,7 +34,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": " serve -s build"
+    "serve": " serve -s build",
+		"predeploy": "build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
