--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-typescript-web-components",
   "version": "0.1.0",
   "private": true,
-	"homepage": "/react-typescript-web-components",
   "dependencies": {
     "@rooks/use-mutation-observer": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -35,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": " serve -s build",
-		"predeploy": "build",
+		"predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
