--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": " serve -s build",
-		"predeploy": "npm run build",
+		"predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
