--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
-    "@tradeshift/elements": "^0.30.0",
-    "@tradeshift/elements.aside": "^0.30.0",
-    "@tradeshift/elements.board": "^0.30.0",
-    "@tradeshift/elements.button": "^0.30.0",
-    "@tradeshift/elements.button-group": "^0.30.0",
-    "@tradeshift/elements.checkbox": "^0.30.0",
-    "@tradeshift/elements.header": "^0.30.0",
-    "@tradeshift/elements.modal": "^0.30.0",
-    "@tradeshift/elements.note": "^0.30.0",
+    "@tradeshift/elements": "^0.33.2",
+    "@tradeshift/elements.aside": "^0.33.2",
+    "@tradeshift/elements.board": "^0.33.2",
+    "@tradeshift/elements.button": "^0.33.2",
+    "@tradeshift/elements.button-group": "^0.33.2",
+    "@tradeshift/elements.checkbox": "^0.33.2",
+    "@tradeshift/elements.header": "^0.33.2",
+    "@tradeshift/elements.modal": "^0.33.2",
+    "@tradeshift/elements.note": "^0.33.2",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^16.11.20",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
@@ -33,6 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "typecheck": "tsc --noEmit",
     "eject": "react-scripts eject",
     "serve": " serve -s build",
     "predeploy": "yarn build",
@@ -60,8 +61,8 @@
   },
   "resolutions": {
     "ansi-regex": "^5.0.1",
-		"browserslist": "^4.14.2",
-		"glob-parent": "^5.1.2",
+    "browserslist": "^4.14.2",
+    "glob-parent": "^5.1.2",
     "immer": "^9.0.6",
     "nth-check": "^2.0.1",
     "set-value": "^4.0.1"
